--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Peso Jack's Treasure Hunt</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
+    @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
     :root {
       font-family: "Rockwell", "Clarendon", "Century Schoolbook", "Times New Roman", serif;
       background: #1b120a;
@@ -17,8 +19,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1rem;
-      padding: 1.6rem;
+      gap: 0.75rem;
+      padding: 1rem;
       background:
         radial-gradient(circle at 20% 20%, rgba(217, 119, 6, 0.25), transparent 40%),
         radial-gradient(circle at 80% 10%, rgba(217, 87, 24, 0.18), transparent 35%),
@@ -27,11 +29,11 @@
     }
 
     .game-shell {
-      width: min(960px, 100%);
+      width: min(940px, 100%);
       background: linear-gradient(160deg, rgba(53, 33, 21, 0.92), rgba(36, 23, 15, 0.95));
       border: 2px solid #8b5a2b;
-      border-radius: 18px;
-      padding: 2.1rem 1.6rem 2.5rem;
+      border-radius: 16px;
+      padding: 1.5rem 1.25rem 1.8rem;
       box-shadow:
         0 18px 50px rgba(0, 0, 0, 0.55),
         inset 0 0 0 1px rgba(255, 255, 255, 0.04);
@@ -43,7 +45,7 @@
     .game-shell::after {
       content: "";
       position: absolute;
-      inset: 14px;
+      inset: 12px;
       border: 1px dashed rgba(255, 255, 255, 0.08);
       border-radius: 12px;
       pointer-events: none;
@@ -62,7 +64,7 @@
     .subtitle {
       text-align: center;
       color: #f1d6a7;
-      margin: 0.55rem 0 1.6rem;
+      margin: 0.4rem 0 1.2rem;
       font-size: 0.97rem;
       letter-spacing: 0.05em;
     }
@@ -72,7 +74,7 @@
         linear-gradient(180deg, #2a1a11 0%, #1c120c 100%);
       border: 1px solid #8b5a2b;
       border-radius: 14px;
-      padding: 1.35rem 1.15rem;
+      padding: 1.05rem 1rem;
       box-shadow:
         inset 0 0 28px rgba(0, 0, 0, 0.45),
         0 10px 18px rgba(0, 0, 0, 0.35);
@@ -100,13 +102,13 @@
     }
 
     .letters {
-      margin-top: 1.45rem;
+      margin-top: 1rem;
     }
 
     #letters {
       display: grid;
       grid-template-columns: repeat(7, minmax(0, 1fr));
-      gap: 0.5rem;
+      gap: 0.35rem;
       justify-items: center;
     }
 
@@ -117,8 +119,8 @@
     }
 
     .letter {
-      width: 2.35rem;
-      height: 2.35rem;
+      width: 2.1rem;
+      height: 2.1rem;
       border-radius: 8px;
       border: 1px solid #c08445;
       background: linear-gradient(145deg, #3a2416, #29170f);
@@ -156,10 +158,20 @@
     }
 
     .status-row {
-      margin-top: 1.5rem;
+      margin: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 0.4rem;
+    }
+
+    #reset {
+      display: none;
+    }
+
+    .right-column {
+      display: flex;
+      flex-direction: column;
       gap: 0.75rem;
     }
 
@@ -201,8 +213,8 @@
     }
 
     .tv-frame {
-      width: min(980px, 100%);
-      margin: 0 auto 1.4rem;
+      width: min(940px, 100%);
+      margin: 0 auto 0.9rem;
       background: linear-gradient(180deg, #3d2a1b 0%, #24160e 100%);
       border: 2px solid #8b5a2b;
       border-radius: 24px;
@@ -230,7 +242,7 @@
       background: radial-gradient(ellipse at center, rgba(14, 9, 6, 0.8) 0%, rgba(8, 5, 3, 0.95) 70%), #0e0906;
       border: 2px solid #8b5a2b;
       border-radius: 14px;
-      height: 240px;
+      height: 200px;
       overflow: hidden;
       padding: 0;
       position: relative;
@@ -244,7 +256,7 @@
       inset: 0;
       display: grid;
       place-items: center;
-      font-size: 1.6rem;
+      font-size: 1.45rem;
       font-weight: 900;
       letter-spacing: 0.12em;
       color: #fcd34d;
@@ -278,17 +290,22 @@
       }
     }
 
+    :root {
+      --story-duration: 176s;
+    }
+
     .story-scroll {
       position: absolute;
       width: calc(100% - 2rem);
       left: 1rem;
       top: 100%;
-      animation: scroll-story 80s linear infinite;
-      animation-delay: 32s;
+      animation: scroll-story var(--story-duration) linear infinite;
+      animation-delay: 0s;
       animation-fill-mode: forwards;
       opacity: 0;
-      font-size: 1.08rem;
-      line-height: 1.6;
+      font-family: "Press Start 2P", "Rockwell", "Clarendon", "Times New Roman", serif;
+      font-size: 1.12rem;
+      line-height: 1.55;
       color: #f4e9d5;
       z-index: 1;
       transition: opacity 0.8s ease;
@@ -303,15 +320,16 @@
       animation-play-state: paused;
     }
 
+
     .story-controls {
       display: flex;
-      gap: 0.5rem;
-      margin-top: 0.65rem;
+      gap: 0.4rem;
+      margin-top: 0.45rem;
       justify-content: flex-start;
     }
 
     .story-btn {
-      padding: 0.35rem 0.9rem;
+      padding: 0.3rem 0.8rem;
       border-radius: 10px;
       border: 1px solid #c08445;
       background: linear-gradient(135deg, #fcd34d, #d97706);
@@ -319,7 +337,7 @@
       font-weight: 800;
       letter-spacing: 0.04em;
       cursor: pointer;
-      box-shadow: 0 8px 18px rgba(217, 119, 6, 0.35);
+      box-shadow: 0 6px 14px rgba(217, 119, 6, 0.3);
       transition: transform 0.1s ease, box-shadow 0.15s ease, filter 0.15s ease;
     }
 
@@ -358,9 +376,9 @@
       background: url("cowboy-horse.png") center/contain no-repeat;
       image-rendering: pixelated;
       animation: rideAcross 14s linear forwards;
-      animation-delay: 2s;
+      animation-delay: 3s;
       animation-fill-mode: forwards;
-      opacity: 1;
+      opacity: 0;
       top: 55%;
       left: 50%;
       z-index: 5;
@@ -388,10 +406,26 @@
       transition: opacity 0.8s ease;
       z-index: 7;
       pointer-events: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
     }
 
     .guitar-overlay.show {
       opacity: 1;
+    }
+
+    .guitar-note {
+      color: #fcd34d;
+      font-weight: 800;
+      letter-spacing: 0.06em;
+      text-align: center;
+      text-shadow: 0 2px 12px rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.55);
+      padding: 0.6rem 0.9rem;
+      border-radius: 10px;
+      max-width: 320px;
     }
 
     .desert-sun {
@@ -490,14 +524,14 @@
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 0.9rem;
-      margin: 1rem 0 1.3rem;
+      margin: 0.6rem 0 1rem;
     }
 
     .cowpoke {
       background: linear-gradient(180deg, rgba(58, 34, 22, 0.8), rgba(42, 26, 18, 0.9));
       border: 1px solid #8b5a2b;
       border-radius: 12px;
-      padding: 0.75rem 0.85rem;
+      padding: 0.6rem 0.75rem;
       box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
       transition: transform 0.1s ease, box-shadow 0.15s ease;
     }
@@ -530,9 +564,9 @@
     .wheel-row {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 1rem;
+      gap: 0.75rem;
       align-items: center;
-      margin-bottom: 0.6rem;
+      margin-bottom: 0.4rem;
     }
 
     @media (min-width: 780px) {
@@ -543,7 +577,7 @@
 
     .wheel-wrapper {
       position: relative;
-      width: min(360px, 100%);
+      width: min(340px, 100%);
       margin: 0 auto;
       aspect-ratio: 1 / 1;
       display: grid;
@@ -622,8 +656,8 @@
     }
 
     .wedge-readout {
-      min-height: 2.6rem;
-      min-width: 240px;
+      min-height: 2.4rem;
+      min-width: 220px;
       border-radius: 12px;
       border: 1px solid #8b5a2b;
       background: linear-gradient(180deg, rgba(42, 26, 18, 0.9), rgba(27, 18, 10, 0.95));
@@ -638,7 +672,7 @@
 
     @media (max-width: 780px) {
       .game-shell {
-        padding: 1.6rem 1rem 1.8rem;
+      padding: 1.2rem 0.9rem 1.4rem;
       }
       .wheel-row {
         grid-template-columns: 1fr;
@@ -711,20 +745,25 @@
         <div class="pixel-sprite" aria-hidden="true"></div>
       </div>
       <div class="tv-blackout" id="tv-blackout"></div>
-      <div class="guitar-overlay" id="guitar-overlay"></div>
+      <div class="guitar-overlay" id="guitar-overlay">
+        <div class="guitar-note">Check the guitar chamber of Peso John</div>
+      </div>
       <div class="story-scroll" id="story-scroll">
-        The sun dipped low over the California coast as a rugged vagabond rode the cliffside trail, his guitar strapped
-        across his back like a second spine. Dust clung to his coat, salt to his hair, and the wind carried the low hum
-        of the Pacific below.<br><br>
-        They called him Peso Jack, a wanderer who followed stories more than roads.<br><br>
-        At a narrow overlook, something fluttered beneath a stone — a scrap of parchment, placed with care but no
+        The sun bled gold over the California cliffs as a dusty wanderer rode the edge of the world, saddlebags heavy
+        with questions instead of loot. Peso Jack traveled light, keeping only a sun-faded bandana from his cousin Peso
+        John a six-string legend who had just lost his last duel with dysentery. The memory of John's final riff still
+        haunted the wind that whipped off the Pacific.<br><br>
+        They called Jack a story-chaser, a man who collected whispers instead of gold. Tonight, the breeze carried one
+        straight to him.<br><br>
+        At a narrow overlook, something fluttered beneath a stone—a scrap of parchment, placed with care but no
         footprints around it. Jack opened it.<br><br>
         “Five words guard what you seek.<br>
         Find them, and the path will reveal itself.”<br><br>
         Beneath the message, a strange symbol: a circle split by a single line, as if marking something hollow…
         something waiting.<br><br>
-        Jack pocketed the note, mounted up, and rode on.<br><br>
-        The puzzle had found him — and the journey had begun.<br><br>
+        Jack pocketed the note, touched the worn bandana at his wrist in John's honor, and rode on. If his cousin's
+        ghost could still sing, Jack would make sure the song reached the right ears.<br><br>
+        The puzzle had found him—and the journey had begun.<br><br>
         Help Peso Jack uncover the hidden phrase and unlock the next chapter of his adventure.<br><br>
         Who will be the hero Player 1: Mom or Player 2: PaPa?
       </div>
@@ -771,17 +810,19 @@
           <div id="wedge" class="wedge-readout">Waiting to spin…</div>
         </div>
       </div>
-      <div class="panel">
-        <div class="label">Choose a Letter</div>
-        <div id="letters"></div>
+      <div class="right-column">
+        <div class="panel">
+          <div class="status-row">
+            <div id="status">Spin the wheel to start.</div>
+            <button id="reset">Reset Puzzle</button>
+          </div>
+        </div>
+        <div class="panel">
+          <div class="label">Choose a Letter</div>
+          <div id="letters"></div>
+        </div>
       </div>
     </div>
-
-    <div class="status-row">
-      <div id="status">Spin the wheel to start.</div>
-      <button id="reset">Reset Puzzle</button>
-    </div>
-  </div>
 
   <script>
     (function () {
@@ -814,6 +855,18 @@
       const pixelScene = document.getElementById("pixel-scene");
       const blackoutEl = document.getElementById("tv-blackout");
       const guitarEl = document.getElementById("guitar-overlay");
+      const PLAYER_NAMES = ["Mom", "Papa"];
+      const titleEl = document.querySelector(".tv-title");
+      let storyStarted = false;
+      let storyAnimation;
+      let lastBankruptPlayer = null;
+
+      function getStoryAnimation() {
+        if (!storyAnimation) {
+          storyAnimation = storyEl.getAnimations()[0] || null;
+        }
+        return storyAnimation;
+      }
 
       const ctx = wheelCanvas.getContext("2d");
       const radius = wheelCanvas.width / 2;
@@ -892,7 +945,7 @@
       }
 
       function setSolvedUI() {
-        statusEl.textContent = `Solved! Player ${currentPlayer + 1} claims the treasure.`;
+        statusEl.textContent = `Solved! ${PLAYER_NAMES[currentPlayer]} claims the treasure. Hope they are the sharin type!`;
         statusEl.classList.add("solved");
         lettersEl.querySelectorAll("button").forEach((btn) => (btn.disabled = true));
         spinBtn.disabled = true;
@@ -928,7 +981,7 @@
         currentPlayer = currentPlayer === 0 ? 1 : 0;
         highlightCurrentPlayer();
         const prefix = reason ? `${reason} ` : "";
-        setUnsolvedUI(`${prefix}Player ${currentPlayer + 1}, your turn to spin.`);
+        setUnsolvedUI(`${prefix}${PLAYER_NAMES[currentPlayer]}, your turn to spin.`);
         canGuess = false;
       }
 
@@ -951,9 +1004,11 @@
             `Nice find! ${hits} letter${hits > 1 ? "s" : ""} worth ${hits * PRIZE_PER_LETTER}. Spin again.`
           );
         } else {
-          switchPlayer("No hits. Passing the turn.");
+          switchPlayer("OPE! No hits. Passing the turn.");
           renderPhrase();
         }
+        spinning = false;
+        spinBtn.disabled = false;
       }
 
       function renderLetters() {
@@ -970,17 +1025,26 @@
 
       function evaluateWedge(index) {
         const wedge = WEDGES[index];
-        wedgeReadout.textContent = `Landed on: ${wedge}`;
+        const wedgePrefix = wedge === "Bankrupt" || wedge === "Lose A Turn" ? "OPE! " : "";
+        wedgeReadout.textContent = `${wedgePrefix}Landed on: ${wedge}`;
 
         if (wedge === "Bankrupt") {
           scores[currentPlayer] = 0;
           updateScores();
-          switchPlayer("Bankrupt! All loot lost.");
+          const chainBankrupt = lastBankruptPlayer !== null && lastBankruptPlayer !== currentPlayer;
+          const prefix = chainBankrupt ? "OPE! ya'll should learn how to spin better. " : "";
+          switchPlayer(`${prefix}Bankrupt! All loot lost.`);
+          lastBankruptPlayer = currentPlayer;
+          spinBtn.disabled = false;
         } else if (wedge === "Lose A Turn") {
           switchPlayer("Lost the turn.");
+          lastBankruptPlayer = null;
+          spinBtn.disabled = false;
         } else {
+          lastBankruptPlayer = null;
           canGuess = true;
-          setUnsolvedUI(`Player ${currentPlayer + 1}, you landed on "${wedge}". Guess a consonant to earn ${PRIZE_PER_LETTER} per hit.`);
+          setUnsolvedUI(`${PLAYER_NAMES[currentPlayer]}, it's your turn. Guess a letter to earn ${PRIZE_PER_LETTER} per hit.`);
+          spinBtn.disabled = true;
         }
       }
 
@@ -989,7 +1053,7 @@
         spinning = true;
         canGuess = false;
         spinBtn.disabled = true;
-        setUnsolvedUI(`Player ${currentPlayer + 1} is spinning...`);
+        setUnsolvedUI(`${PLAYER_NAMES[currentPlayer]} is spinning...`);
 
         const rotations = 4 + Math.random() * 4; // between 4 and 8 spins
         const extraDegrees = Math.random() * 360;
@@ -1014,7 +1078,6 @@
             const index = Math.floor(normalized / sliceDeg + 1e-6) % WEDGES.length;
             evaluateWedge(index);
             spinning = false;
-            spinBtn.disabled = false;
           }
         }
         requestAnimationFrame(animate);
@@ -1049,22 +1112,46 @@
       spinBtn.addEventListener("click", spinWheel);
       resetBtn.addEventListener("click", resetGame);
       pauseStoryBtn.addEventListener("click", () => {
+        const anim = getStoryAnimation();
+        if (anim) anim.pause();
         storyEl.classList.add("paused");
       });
       playStoryBtn.addEventListener("click", () => {
+        const anim = getStoryAnimation();
+        if (anim) {
+          anim.playbackRate = 1;
+          anim.play();
+        }
         storyEl.classList.remove("paused");
       });
       rewindStoryBtn.addEventListener("click", () => {
-        // restart the animation from the top
+        const anim = getStoryAnimation();
+        if (anim) {
+          // reverse from the current position without jumping to the start
+          const currentTime = anim.currentTime;
+          anim.pause();
+          anim.playbackRate = -1;
+          anim.currentTime = currentTime;
+          anim.play();
+        }
         storyEl.classList.remove("paused");
-        storyEl.style.animation = "none";
-        // force reflow to restart animation
-        // eslint-disable-next-line no-unused-expressions
-        storyEl.offsetWidth;
-        storyEl.style.animation = "";
+        storyEl.classList.remove("rewind");
+      });
+
+      // Start scroll only after all title animations finish (fade and return)
+      storyEl.style.animationPlayState = "paused";
+      titleEl.addEventListener("animationend", (event) => {
+        if (event.animationName !== "titleReturn" || storyStarted) return;
+        storyStarted = true;
+        const anim = getStoryAnimation();
+        if (anim) {
+          anim.playbackRate = 1;
+          anim.play();
+        } else {
+          storyEl.style.animationPlayState = "running";
+        }
       });
     })();
   </script>
 </body>
 </html>
-
