--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
       <button class="story-btn" id="start-game">Start Game</button>
       <button class="story-btn" id="pause-story">Pause Scroll</button>
       <button class="story-btn" id="play-story">Play Scroll</button>
-      <button class="story-btn hidden" id="rewind-story">Rewind</button>
+      <button class="story-btn hidden" id="rewind-story" aria-hidden="true" tabindex="-1">Rewind</button>
       <button class="story-btn hidden" id="test-solve">Test Solve</button>
     </div>
   </div>
