--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
     </div>
   </div>
 
-  <div class="game-shell show">
+  <div class="game-shell">
     <h1>Peso Jack's Wheel Of Destiny</h1>
     <p class="subtitle">Two riders take turns: spin the wheel, guess a letter, win the loot.</p>
 
