--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,8 @@
         “Eight words guard what you seek.<br>
         Find them, and the path will reveal itself.”<br><br>
         Beneath the lines someone had inked a curious mark: a circle split by a single stroke, like a sign for something
-        hollow inside, something waiting to be found.<br><br>
+        hollow inside, something waiting to be found. At the bottom: two small initials, P.J., as if Peso John himself
+        had left the clue.<br><br>
         Jack slipped the note into his coat, touched the worn bandana at his wrist in John’s honor, and climbed back
         into the saddle. If his cousin’s ghost still had a song left in it, Jack meant to see it carried to the right
         ears.<br><br>
@@ -1567,7 +1568,7 @@
             storyEl.classList.add("paused");
             storyEl.style.animationPlayState = "paused";
           }
-        }, STORY_DURATION_MS * 0.65);
+        }, STORY_DURATION_MS * 0.55);
       });
 
       storyEl.addEventListener("animationend", (event) => {
