--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,57 @@
         max-width: 260px;
       }
     }
+
+    /* ultra-small mobile tweaks */
+    @media (max-width: 420px) {
+      .tv-frame.tall .tv-screen {
+        height: 280px;
+      }
+      .story-scroll {
+        font-size: 0.95rem;
+        line-height: 1.4;
+      }
+      .story-controls {
+        gap: 0.3rem;
+      }
+      .story-btn {
+        padding: 0.28rem 0.65rem;
+        font-size: 0.85rem;
+      }
+      .game-shell {
+        padding: 1rem 0.75rem 1rem;
+        width: 100%;
+      }
+      #phrase {
+        font-size: 1rem;
+        letter-spacing: 0.22em;
+      }
+      .letters-panel .label {
+        font-size: 0.7rem;
+      }
+      .letter {
+        width: 1.8rem;
+        height: 1.8rem;
+        font-size: 0.78rem;
+      }
+      .wheel-wrapper {
+        width: min(230px, 100%);
+      }
+      #wheel {
+        width: 230px;
+        height: 230px;
+      }
+      .wedge-readout {
+        max-width: 230px;
+        font-size: 0.85rem;
+      }
+      .cowpoke-score {
+        font-size: 1.1rem;
+      }
+      .cowpoke-label {
+        font-size: 0.7rem;
+      }
+    }
   </style>
 </head>
 <body>
